<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".AddDoctorActivity">

    <TextView
        android:id="@+id/heading_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="18dp"
        android:text="Inserisci il tuo medico per iniziare"
        android:textColor="#555555"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/search_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heading_label"
        android:layout_alignStart="@+id/heading_label"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="20dp"
        android:layout_toStartOf="@+id/search_btn"
        android:background="@drawable/search_layout"
        android:ems="10"
        android:hint="Inserisci il cognome del tuo medico"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:textColor="#999999"
        android:textSize="16sp" />

    <ImageButton
        android:id="@+id/search_btn"
        android:layout_width="48dp"
        android:layout_height="58dp"
        android:layout_alignTop="@+id/search_field"
        android:layout_alignBottom="@+id/search_field"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-9dp"
        android:layout_marginEnd="39dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="-6dp"
        android:background="@android:color/background_light"
        app:srcCompat="@mipmap/search_button" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/result_list"
        android:layout_width="match_parent"
        android:layout_height="492dp"
        android:layout_below="@+id/search_field"
        android:layout_marginTop="74dp"></androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/text_suggestion"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_below="@+id/search_field"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="19dp" />

</RelativeLayout>