<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_pending"
        android:icon="@drawable/pending"
        android:title="Pending" />
    <item
        android:id="@+id/navigation_date"
        android:icon="@drawable/booked"
        android:title="Confermate" />

</menu>